# distfxn

./: README.md  pyproject.toml
nbs/: distirbutions.py  distribs.py
src/distfxn/: __init__.py
src/distfxn/specs/: __init__.py  base.py  bernoulli.py  equivalence_cases.py  normal.py  output_checks.py  param_sampling.py  registry.py  types.py  uniform.py  verification.py
